Don't crash on <binding> elements with no "id" attribute.  Bug 255715, r+sr=bryner